Add benchmarks for netty and tomcat